[package]
name = "charlcd"
version = "0.1.0"
authors = ["Agathe Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust library for charlcd.c Linux driver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary requirement for of_node hack (width and height)
byteorder = "1.*"
