[package]
name = "charlcd"
version = "0.1.4"
authors = ["Agathe Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "Apache-2.0"
description = "Rust library for charlcd.c Linux driver (HD44780 et al.)"
readme = "README.md"
keywords = ["linux", "hd44780", "charlcd", "driver", "lcd"]
categories = ["embedded"]
repository = "https://github.com/MicroJoe/charlcd"

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# temporary requirement for of_node hack (width and height)
byteorder = "1.*"
